Addressed suggestions in pr comments

--- a/0.data_analysis/plate_5_characteristics/plate_5_sc_feature_selected_camerons_agg_well_corr.ipynb
+++ b/0.data_analysis/plate_5_characteristics/plate_5_sc_feature_selected_camerons_agg_well_corr.ipynb
@@ -5,10 +5,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T01:41:54.200482Z",
-     "iopub.status.busy": "2024-01-26T01:41:54.200379Z",
-     "iopub.status.idle": "2024-01-26T01:41:54.395256Z",
-     "shell.execute_reply": "2024-01-26T01:41:54.394927Z"
+     "iopub.execute_input": "2024-01-26T17:54:21.537809Z",
+     "iopub.status.busy": "2024-01-26T17:54:21.537712Z",
+     "iopub.status.idle": "2024-01-26T17:54:21.732643Z",
+     "shell.execute_reply": "2024-01-26T17:54:21.732335Z"
     },
     "jukit_cell_id": "YJJxwXk4KC"
    },
@@ -34,10 +34,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T01:41:54.397143Z",
-     "iopub.status.busy": "2024-01-26T01:41:54.396997Z",
-     "iopub.status.idle": "2024-01-26T01:41:54.399893Z",
-     "shell.execute_reply": "2024-01-26T01:41:54.399627Z"
+     "iopub.execute_input": "2024-01-26T17:54:21.734448Z",
+     "iopub.status.busy": "2024-01-26T17:54:21.734280Z",
+     "iopub.status.idle": "2024-01-26T17:54:21.737296Z",
+     "shell.execute_reply": "2024-01-26T17:54:21.737017Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -84,10 +84,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T01:41:54.401138Z",
-     "iopub.status.busy": "2024-01-26T01:41:54.401035Z",
-     "iopub.status.idle": "2024-01-26T01:41:54.517562Z",
-     "shell.execute_reply": "2024-01-26T01:41:54.517119Z"
+     "iopub.execute_input": "2024-01-26T17:54:21.738517Z",
+     "iopub.status.busy": "2024-01-26T17:54:21.738412Z",
+     "iopub.status.idle": "2024-01-26T17:54:21.850988Z",
+     "shell.execute_reply": "2024-01-26T17:54:21.850608Z"
     },
     "jukit_cell_id": "xdgUvt0md2"
    },
@@ -98,11 +98,11 @@
     "    f\"{root_dir}/0.data_analysis/plate_5_characteristics/utils\"\n",
     ")\n",
     "\n",
-    "platedf_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_5_sc_feature_selected.parquet\").resolve(strict=True)\n",
-    "platedf = pd.read_parquet(platedf_path)\n",
-    "\n",
     "# Class for calculating correlations\n",
-    "from CorrelatePlate import CorrelatePlate"
+    "from CorrelatePlate import CorrelatePlate\n",
+    "\n",
+    "platedf_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_5_sc_feature_selected.parquet\").resolve(strict=True)\n",
+    "platedf = pd.read_parquet(platedf_path)"
    ]
   },
   {
@@ -119,10 +119,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T01:41:54.519937Z",
-     "iopub.status.busy": "2024-01-26T01:41:54.519609Z",
-     "iopub.status.idle": "2024-01-26T01:41:54.521974Z",
-     "shell.execute_reply": "2024-01-26T01:41:54.521648Z"
+     "iopub.execute_input": "2024-01-26T17:54:21.852948Z",
+     "iopub.status.busy": "2024-01-26T17:54:21.852814Z",
+     "iopub.status.idle": "2024-01-26T17:54:21.855118Z",
+     "shell.execute_reply": "2024-01-26T17:54:21.854832Z"
     },
     "jukit_cell_id": "z3syxsoQ8C"
    },
@@ -146,10 +146,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T01:41:54.523307Z",
-     "iopub.status.busy": "2024-01-26T01:41:54.523121Z",
-     "iopub.status.idle": "2024-01-26T01:41:54.546524Z",
-     "shell.execute_reply": "2024-01-26T01:41:54.546093Z"
+     "iopub.execute_input": "2024-01-26T17:54:21.856432Z",
+     "iopub.status.busy": "2024-01-26T17:54:21.856328Z",
+     "iopub.status.idle": "2024-01-26T17:54:21.879754Z",
+     "shell.execute_reply": "2024-01-26T17:54:21.879392Z"
     },
     "jukit_cell_id": "xhrzmqufGA"
    },
@@ -172,10 +172,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T01:41:54.548175Z",
-     "iopub.status.busy": "2024-01-26T01:41:54.547968Z",
-     "iopub.status.idle": "2024-01-26T01:41:54.805354Z",
-     "shell.execute_reply": "2024-01-26T01:41:54.804809Z"
+     "iopub.execute_input": "2024-01-26T17:54:21.881739Z",
+     "iopub.status.busy": "2024-01-26T17:54:21.881425Z",
+     "iopub.status.idle": "2024-01-26T17:54:22.132930Z",
+     "shell.execute_reply": "2024-01-26T17:54:22.132501Z"
     },
     "jukit_cell_id": "rB32cuv8gh"
    },
@@ -213,16 +213,18 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T01:41:54.807429Z",
-     "iopub.status.busy": "2024-01-26T01:41:54.807263Z",
-     "iopub.status.idle": "2024-01-26T01:41:55.097785Z",
-     "shell.execute_reply": "2024-01-26T01:41:55.097310Z"
+     "iopub.execute_input": "2024-01-26T17:54:22.134881Z",
+     "iopub.status.busy": "2024-01-26T17:54:22.134751Z",
+     "iopub.status.idle": "2024-01-26T17:54:22.422424Z",
+     "shell.execute_reply": "2024-01-26T17:54:22.422033Z"
     },
     "jukit_cell_id": "jkgkgRzXxY"
    },
    "outputs": [],
    "source": [
     "cp = CorrelatePlate()\n",
+    "\n",
+    "# Correlates aggregated wells both between and across groups\n",
     "correlationsdf = cp.correlate_agg_wells(welldf, \"Metadata_Well\", feat_cols, \"Metadata_genotype\")"
    ]
   },
@@ -231,10 +233,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T01:41:55.099625Z",
-     "iopub.status.busy": "2024-01-26T01:41:55.099510Z",
-     "iopub.status.idle": "2024-01-26T01:41:55.113425Z",
-     "shell.execute_reply": "2024-01-26T01:41:55.113046Z"
+     "iopub.execute_input": "2024-01-26T17:54:22.424115Z",
+     "iopub.status.busy": "2024-01-26T17:54:22.424006Z",
+     "iopub.status.idle": "2024-01-26T17:54:22.430379Z",
+     "shell.execute_reply": "2024-01-26T17:54:22.430109Z"
     },
     "jukit_cell_id": "ZWUk9bCL8r"
    },
@@ -308,74 +310,17 @@
        "      <td>C10</td>\n",
        "      <td>0.578919</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>823</th>\n",
-       "      <td>WT</td>\n",
-       "      <td>WT</td>\n",
-       "      <td>G1</td>\n",
-       "      <td>G3</td>\n",
-       "      <td>0.544597</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>824</th>\n",
-       "      <td>WT</td>\n",
-       "      <td>WT</td>\n",
-       "      <td>G1</td>\n",
-       "      <td>G4</td>\n",
-       "      <td>0.083299</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>825</th>\n",
-       "      <td>WT</td>\n",
-       "      <td>WT</td>\n",
-       "      <td>G2</td>\n",
-       "      <td>G3</td>\n",
-       "      <td>0.694062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>826</th>\n",
-       "      <td>WT</td>\n",
-       "      <td>WT</td>\n",
-       "      <td>G2</td>\n",
-       "      <td>G4</td>\n",
-       "      <td>0.325719</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>827</th>\n",
-       "      <td>WT</td>\n",
-       "      <td>WT</td>\n",
-       "      <td>G3</td>\n",
-       "      <td>G4</td>\n",
-       "      <td>0.551952</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2556 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    group0 group1 well0 well1  correlation\n",
-       "0      HET   Null    B5   B10     0.645932\n",
-       "1      HET   Null    B5   B11     0.643180\n",
-       "2      HET   Null    B5   B12     0.487610\n",
-       "3      HET   Null    B5    B9     0.587875\n",
-       "4      HET   Null    B5   C10     0.578919\n",
-       "..     ...    ...   ...   ...          ...\n",
-       "823     WT     WT    G1    G3     0.544597\n",
-       "824     WT     WT    G1    G4     0.083299\n",
-       "825     WT     WT    G2    G3     0.694062\n",
-       "826     WT     WT    G2    G4     0.325719\n",
-       "827     WT     WT    G3    G4     0.551952\n",
-       "\n",
-       "[2556 rows x 5 columns]"
+       "  group0 group1 well0 well1  correlation\n",
+       "0    HET   Null    B5   B10     0.645932\n",
+       "1    HET   Null    B5   B11     0.643180\n",
+       "2    HET   Null    B5   B12     0.487610\n",
+       "3    HET   Null    B5    B9     0.587875\n",
+       "4    HET   Null    B5   C10     0.578919"
       ]
      },
      "execution_count": 8,
@@ -384,7 +329,7 @@
     }
    ],
    "source": [
-    "correlationsdf"
+    "correlationsdf.head()"
    ]
   }
  ],
