--- a/0.data_analysis/plate_5_characteristics/plate_5_sc_feature_selected_camerons_agg_well_corr.ipynb
+++ b/0.data_analysis/plate_5_characteristics/plate_5_sc_feature_selected_camerons_agg_well_corr.ipynb
@@ -1,14 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "jukit_cell_id": "G2uIwtDbAz"
+   },
+   "source": [
+    "# Correlate Cell Profiler Aggregated Wells in Plate 5"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T17:54:21.537809Z",
-     "iopub.status.busy": "2024-01-26T17:54:21.537712Z",
-     "iopub.status.idle": "2024-01-26T17:54:21.732643Z",
-     "shell.execute_reply": "2024-01-26T17:54:21.732335Z"
+     "iopub.execute_input": "2024-03-18T21:04:18.983835Z",
+     "iopub.status.busy": "2024-03-18T21:04:18.983736Z",
+     "iopub.status.idle": "2024-03-18T21:04:19.183293Z",
+     "shell.execute_reply": "2024-03-18T21:04:19.182989Z"
     },
     "jukit_cell_id": "YJJxwXk4KC"
    },
@@ -34,10 +43,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T17:54:21.734448Z",
-     "iopub.status.busy": "2024-01-26T17:54:21.734280Z",
-     "iopub.status.idle": "2024-01-26T17:54:21.737296Z",
-     "shell.execute_reply": "2024-01-26T17:54:21.737017Z"
+     "iopub.execute_input": "2024-03-18T21:04:19.185189Z",
+     "iopub.status.busy": "2024-03-18T21:04:19.185043Z",
+     "iopub.status.idle": "2024-03-18T21:04:19.187923Z",
+     "shell.execute_reply": "2024-03-18T21:04:19.187671Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -84,10 +93,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T17:54:21.738517Z",
-     "iopub.status.busy": "2024-01-26T17:54:21.738412Z",
-     "iopub.status.idle": "2024-01-26T17:54:21.850988Z",
-     "shell.execute_reply": "2024-01-26T17:54:21.850608Z"
+     "iopub.execute_input": "2024-03-18T21:04:19.189553Z",
+     "iopub.status.busy": "2024-03-18T21:04:19.189437Z",
+     "iopub.status.idle": "2024-03-18T21:04:19.307383Z",
+     "shell.execute_reply": "2024-03-18T21:04:19.307020Z"
     },
     "jukit_cell_id": "xdgUvt0md2"
    },
@@ -95,11 +104,11 @@
    "source": [
     "# Path to correlation class\n",
     "sys.path.append(\n",
-    "    f\"{root_dir}/0.data_analysis/plate_5_characteristics/utils\"\n",
+    "    f\"{root_dir}/0.data_analysis/utils\"\n",
     ")\n",
     "\n",
     "# Class for calculating correlations\n",
-    "from CorrelatePlate import CorrelatePlate\n",
+    "from CorrelateData import CorrelateData\n",
     "\n",
     "platedf_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_5_sc_feature_selected.parquet\").resolve(strict=True)\n",
     "platedf = pd.read_parquet(platedf_path)"
@@ -119,17 +128,17 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T17:54:21.852948Z",
-     "iopub.status.busy": "2024-01-26T17:54:21.852814Z",
-     "iopub.status.idle": "2024-01-26T17:54:21.855118Z",
-     "shell.execute_reply": "2024-01-26T17:54:21.854832Z"
+     "iopub.execute_input": "2024-03-18T21:04:19.309481Z",
+     "iopub.status.busy": "2024-03-18T21:04:19.309361Z",
+     "iopub.status.idle": "2024-03-18T21:04:19.311511Z",
+     "shell.execute_reply": "2024-03-18T21:04:19.311268Z"
     },
     "jukit_cell_id": "z3syxsoQ8C"
    },
    "outputs": [],
    "source": [
-    "fig_path = pathlib.Path(\"plate_5_sc_feature_selected_figures\")\n",
-    "fig_path.mkdir(parents=True, exist_ok=True)"
+    "data_path = pathlib.Path(\"plate_5_sc_feature_selected_camerons_agg_well_corr_data\")\n",
+    "data_path.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -146,10 +155,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T17:54:21.856432Z",
-     "iopub.status.busy": "2024-01-26T17:54:21.856328Z",
-     "iopub.status.idle": "2024-01-26T17:54:21.879754Z",
-     "shell.execute_reply": "2024-01-26T17:54:21.879392Z"
+     "iopub.execute_input": "2024-03-18T21:04:19.312860Z",
+     "iopub.status.busy": "2024-03-18T21:04:19.312622Z",
+     "iopub.status.idle": "2024-03-18T21:04:19.349989Z",
+     "shell.execute_reply": "2024-03-18T21:04:19.349667Z"
     },
     "jukit_cell_id": "xhrzmqufGA"
    },
@@ -172,10 +181,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T17:54:21.881739Z",
-     "iopub.status.busy": "2024-01-26T17:54:21.881425Z",
-     "iopub.status.idle": "2024-01-26T17:54:22.132930Z",
-     "shell.execute_reply": "2024-01-26T17:54:22.132501Z"
+     "iopub.execute_input": "2024-03-18T21:04:19.351805Z",
+     "iopub.status.busy": "2024-03-18T21:04:19.351527Z",
+     "iopub.status.idle": "2024-03-18T21:04:19.598157Z",
+     "shell.execute_reply": "2024-03-18T21:04:19.597752Z"
     },
     "jukit_cell_id": "rB32cuv8gh"
    },
@@ -213,19 +222,33 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T17:54:22.134881Z",
-     "iopub.status.busy": "2024-01-26T17:54:22.134751Z",
-     "iopub.status.idle": "2024-01-26T17:54:22.422424Z",
-     "shell.execute_reply": "2024-01-26T17:54:22.422033Z"
+     "iopub.execute_input": "2024-03-18T21:04:19.600569Z",
+     "iopub.status.busy": "2024-03-18T21:04:19.600428Z",
+     "iopub.status.idle": "2024-03-18T21:04:20.059123Z",
+     "shell.execute_reply": "2024-03-18T21:04:20.058542Z"
     },
     "jukit_cell_id": "jkgkgRzXxY"
    },
    "outputs": [],
    "source": [
-    "cp = CorrelatePlate()\n",
+    "cd = CorrelateData()\n",
     "\n",
     "# Correlates aggregated wells both between and across groups\n",
-    "correlationsdf = cp.correlate_agg_wells(welldf, \"Metadata_Well\", feat_cols, \"Metadata_genotype\")"
+    "correlationsdf = cd.inter_correlations(\n",
+    "    welldf.reset_index(drop=True),\n",
+    "    [\"Metadata_Well\"],\n",
+    "    feat_cols,\n",
+    "    [\"Metadata_genotype\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jukit_cell_id": "9cRnSR2wTC"
+   },
+   "source": [
+    "## Store Correlation Data"
    ]
   },
   {
@@ -233,10 +256,27 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T17:54:22.424115Z",
-     "iopub.status.busy": "2024-01-26T17:54:22.424006Z",
-     "iopub.status.idle": "2024-01-26T17:54:22.430379Z",
-     "shell.execute_reply": "2024-01-26T17:54:22.430109Z"
+     "iopub.execute_input": "2024-03-18T21:04:20.061359Z",
+     "iopub.status.busy": "2024-03-18T21:04:20.061206Z",
+     "iopub.status.idle": "2024-03-18T21:04:20.065765Z",
+     "shell.execute_reply": "2024-03-18T21:04:20.065503Z"
+    },
+    "jukit_cell_id": "HD42qd1jUX"
+   },
+   "outputs": [],
+   "source": [
+    "correlationsdf.to_parquet(f\"{data_path}/plate_5_sc_feature_selected_camerons_agg_well_corr.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-18T21:04:20.067280Z",
+     "iopub.status.busy": "2024-03-18T21:04:20.067178Z",
+     "iopub.status.idle": "2024-03-18T21:04:20.073352Z",
+     "shell.execute_reply": "2024-03-18T21:04:20.073118Z"
     },
     "jukit_cell_id": "ZWUk9bCL8r"
    },
@@ -262,68 +302,75 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>group0</th>\n",
-       "      <th>group1</th>\n",
-       "      <th>well0</th>\n",
-       "      <th>well1</th>\n",
        "      <th>correlation</th>\n",
+       "      <th>Metadata_genotype__group0</th>\n",
+       "      <th>Metadata_genotype__group1</th>\n",
+       "      <th>Metadata_Well__group0</th>\n",
+       "      <th>Metadata_Well__group1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0.643891</td>\n",
        "      <td>HET</td>\n",
-       "      <td>Null</td>\n",
+       "      <td>HET</td>\n",
        "      <td>B5</td>\n",
-       "      <td>B10</td>\n",
-       "      <td>0.645932</td>\n",
+       "      <td>B5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>0.636822</td>\n",
        "      <td>HET</td>\n",
-       "      <td>Null</td>\n",
+       "      <td>HET</td>\n",
        "      <td>B5</td>\n",
-       "      <td>B11</td>\n",
-       "      <td>0.643180</td>\n",
+       "      <td>B5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>0.456990</td>\n",
        "      <td>HET</td>\n",
-       "      <td>Null</td>\n",
+       "      <td>HET</td>\n",
        "      <td>B5</td>\n",
-       "      <td>B12</td>\n",
-       "      <td>0.487610</td>\n",
+       "      <td>B5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>0.584771</td>\n",
        "      <td>HET</td>\n",
-       "      <td>Null</td>\n",
+       "      <td>HET</td>\n",
        "      <td>B5</td>\n",
-       "      <td>B9</td>\n",
-       "      <td>0.587875</td>\n",
+       "      <td>B5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>0.576349</td>\n",
        "      <td>HET</td>\n",
-       "      <td>Null</td>\n",
+       "      <td>HET</td>\n",
        "      <td>B5</td>\n",
-       "      <td>C10</td>\n",
-       "      <td>0.578919</td>\n",
+       "      <td>B5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  group0 group1 well0 well1  correlation\n",
-       "0    HET   Null    B5   B10     0.645932\n",
-       "1    HET   Null    B5   B11     0.643180\n",
-       "2    HET   Null    B5   B12     0.487610\n",
-       "3    HET   Null    B5    B9     0.587875\n",
-       "4    HET   Null    B5   C10     0.578919"
+       "   correlation Metadata_genotype__group0 Metadata_genotype__group1  \\\n",
+       "0     0.643891                       HET                       HET   \n",
+       "1     0.636822                       HET                       HET   \n",
+       "2     0.456990                       HET                       HET   \n",
+       "3     0.584771                       HET                       HET   \n",
+       "4     0.576349                       HET                       HET   \n",
+       "\n",
+       "  Metadata_Well__group0 Metadata_Well__group1  \n",
+       "0                    B5                    B5  \n",
+       "1                    B5                    B5  \n",
+       "2                    B5                    B5  \n",
+       "3                    B5                    B5  \n",
+       "4                    B5                    B5  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
