Updated to include within genotype correlations

--- a/0.data_analysis/plate_5_characteristics/plate_5_sc_feature_selected_camerons_agg_well_corr.ipynb
+++ b/0.data_analysis/plate_5_characteristics/plate_5_sc_feature_selected_camerons_agg_well_corr.ipynb
@@ -14,10 +14,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:04:18.983835Z",
-     "iopub.status.busy": "2024-03-18T21:04:18.983736Z",
-     "iopub.status.idle": "2024-03-18T21:04:19.183293Z",
-     "shell.execute_reply": "2024-03-18T21:04:19.182989Z"
+     "iopub.execute_input": "2024-03-18T21:13:27.793028Z",
+     "iopub.status.busy": "2024-03-18T21:13:27.792930Z",
+     "iopub.status.idle": "2024-03-18T21:13:27.995317Z",
+     "shell.execute_reply": "2024-03-18T21:13:27.995001Z"
     },
     "jukit_cell_id": "YJJxwXk4KC"
    },
@@ -43,10 +43,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:04:19.185189Z",
-     "iopub.status.busy": "2024-03-18T21:04:19.185043Z",
-     "iopub.status.idle": "2024-03-18T21:04:19.187923Z",
-     "shell.execute_reply": "2024-03-18T21:04:19.187671Z"
+     "iopub.execute_input": "2024-03-18T21:13:27.997110Z",
+     "iopub.status.busy": "2024-03-18T21:13:27.996944Z",
+     "iopub.status.idle": "2024-03-18T21:13:28.000036Z",
+     "shell.execute_reply": "2024-03-18T21:13:27.999769Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -93,10 +93,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:04:19.189553Z",
-     "iopub.status.busy": "2024-03-18T21:04:19.189437Z",
-     "iopub.status.idle": "2024-03-18T21:04:19.307383Z",
-     "shell.execute_reply": "2024-03-18T21:04:19.307020Z"
+     "iopub.execute_input": "2024-03-18T21:13:28.001687Z",
+     "iopub.status.busy": "2024-03-18T21:13:28.001586Z",
+     "iopub.status.idle": "2024-03-18T21:13:28.123676Z",
+     "shell.execute_reply": "2024-03-18T21:13:28.123229Z"
     },
     "jukit_cell_id": "xdgUvt0md2"
    },
@@ -128,10 +128,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:04:19.309481Z",
-     "iopub.status.busy": "2024-03-18T21:04:19.309361Z",
-     "iopub.status.idle": "2024-03-18T21:04:19.311511Z",
-     "shell.execute_reply": "2024-03-18T21:04:19.311268Z"
+     "iopub.execute_input": "2024-03-18T21:13:28.125759Z",
+     "iopub.status.busy": "2024-03-18T21:13:28.125618Z",
+     "iopub.status.idle": "2024-03-18T21:13:28.127887Z",
+     "shell.execute_reply": "2024-03-18T21:13:28.127557Z"
     },
     "jukit_cell_id": "z3syxsoQ8C"
    },
@@ -155,10 +155,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:04:19.312860Z",
-     "iopub.status.busy": "2024-03-18T21:04:19.312622Z",
-     "iopub.status.idle": "2024-03-18T21:04:19.349989Z",
-     "shell.execute_reply": "2024-03-18T21:04:19.349667Z"
+     "iopub.execute_input": "2024-03-18T21:13:28.129168Z",
+     "iopub.status.busy": "2024-03-18T21:13:28.129058Z",
+     "iopub.status.idle": "2024-03-18T21:13:28.150306Z",
+     "shell.execute_reply": "2024-03-18T21:13:28.149871Z"
     },
     "jukit_cell_id": "xhrzmqufGA"
    },
@@ -181,10 +181,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:04:19.351805Z",
-     "iopub.status.busy": "2024-03-18T21:04:19.351527Z",
-     "iopub.status.idle": "2024-03-18T21:04:19.598157Z",
-     "shell.execute_reply": "2024-03-18T21:04:19.597752Z"
+     "iopub.execute_input": "2024-03-18T21:13:28.152094Z",
+     "iopub.status.busy": "2024-03-18T21:13:28.151869Z",
+     "iopub.status.idle": "2024-03-18T21:13:28.410394Z",
+     "shell.execute_reply": "2024-03-18T21:13:28.409842Z"
     },
     "jukit_cell_id": "rB32cuv8gh"
    },
@@ -222,24 +222,48 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:04:19.600569Z",
-     "iopub.status.busy": "2024-03-18T21:04:19.600428Z",
-     "iopub.status.idle": "2024-03-18T21:04:20.059123Z",
-     "shell.execute_reply": "2024-03-18T21:04:20.058542Z"
+     "iopub.execute_input": "2024-03-18T21:13:28.412616Z",
+     "iopub.status.busy": "2024-03-18T21:13:28.412464Z",
+     "iopub.status.idle": "2024-03-18T21:13:28.924198Z",
+     "shell.execute_reply": "2024-03-18T21:13:28.923800Z"
     },
     "jukit_cell_id": "jkgkgRzXxY"
    },
    "outputs": [],
    "source": [
     "cd = CorrelateData()\n",
+    "correlationsdf = []\n",
     "\n",
-    "# Correlates aggregated wells both between and across groups\n",
-    "correlationsdf = cd.inter_correlations(\n",
+    "# Correlates aggregated wells across genotype\n",
+    "correlationsdf.append(cd.inter_correlations(\n",
     "    welldf.reset_index(drop=True),\n",
     "    [\"Metadata_Well\"],\n",
     "    feat_cols,\n",
     "    [\"Metadata_genotype\"]\n",
-    ")"
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-03-18T21:13:28.925970Z",
+     "iopub.status.busy": "2024-03-18T21:13:28.925760Z",
+     "iopub.status.idle": "2024-03-18T21:13:29.125850Z",
+     "shell.execute_reply": "2024-03-18T21:13:29.125396Z"
+    },
+    "jukit_cell_id": "2W0HhVoQ8N"
+   },
+   "outputs": [],
+   "source": [
+    "# Correlates aggregated wells within genotype\n",
+    "correlationsdf.append(cd.intra_correlations(\n",
+    "    welldf.reset_index(drop=True),\n",
+    "    [\"Metadata_Well\"],\n",
+    "    feat_cols,\n",
+    "    [\"Metadata_genotype\"]\n",
+    "))"
    ]
   },
   {
@@ -253,30 +277,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:04:20.061359Z",
-     "iopub.status.busy": "2024-03-18T21:04:20.061206Z",
-     "iopub.status.idle": "2024-03-18T21:04:20.065765Z",
-     "shell.execute_reply": "2024-03-18T21:04:20.065503Z"
+     "iopub.execute_input": "2024-03-18T21:13:29.127611Z",
+     "iopub.status.busy": "2024-03-18T21:13:29.127407Z",
+     "iopub.status.idle": "2024-03-18T21:13:29.132964Z",
+     "shell.execute_reply": "2024-03-18T21:13:29.132621Z"
     },
     "jukit_cell_id": "HD42qd1jUX"
    },
    "outputs": [],
    "source": [
+    "correlationsdf = pd.concat(correlationsdf, axis=0)\n",
     "correlationsdf.to_parquet(f\"{data_path}/plate_5_sc_feature_selected_camerons_agg_well_corr.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:04:20.067280Z",
-     "iopub.status.busy": "2024-03-18T21:04:20.067178Z",
-     "iopub.status.idle": "2024-03-18T21:04:20.073352Z",
-     "shell.execute_reply": "2024-03-18T21:04:20.073118Z"
+     "iopub.execute_input": "2024-03-18T21:13:29.134604Z",
+     "iopub.status.busy": "2024-03-18T21:13:29.134337Z",
+     "iopub.status.idle": "2024-03-18T21:13:29.140990Z",
+     "shell.execute_reply": "2024-03-18T21:13:29.140609Z"
     },
     "jukit_cell_id": "ZWUk9bCL8r"
    },
@@ -370,7 +395,7 @@
        "4                    B5                    B5  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
