--- a/0.data_analysis/plate_5_characteristics/plate_5_sc_feature_selected_camerons_agg_well_corr.ipynb
+++ b/0.data_analysis/plate_5_characteristics/plate_5_sc_feature_selected_camerons_agg_well_corr.ipynb
@@ -14,10 +14,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:13:27.793028Z",
-     "iopub.status.busy": "2024-03-18T21:13:27.792930Z",
-     "iopub.status.idle": "2024-03-18T21:13:27.995317Z",
-     "shell.execute_reply": "2024-03-18T21:13:27.995001Z"
+     "iopub.execute_input": "2024-03-20T18:27:14.251565Z",
+     "iopub.status.busy": "2024-03-20T18:27:14.251377Z",
+     "iopub.status.idle": "2024-03-20T18:27:14.454555Z",
+     "shell.execute_reply": "2024-03-20T18:27:14.454205Z"
     },
     "jukit_cell_id": "YJJxwXk4KC"
    },
@@ -43,10 +43,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:13:27.997110Z",
-     "iopub.status.busy": "2024-03-18T21:13:27.996944Z",
-     "iopub.status.idle": "2024-03-18T21:13:28.000036Z",
-     "shell.execute_reply": "2024-03-18T21:13:27.999769Z"
+     "iopub.execute_input": "2024-03-20T18:27:14.456782Z",
+     "iopub.status.busy": "2024-03-20T18:27:14.456424Z",
+     "iopub.status.idle": "2024-03-20T18:27:14.459730Z",
+     "shell.execute_reply": "2024-03-20T18:27:14.459406Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -93,10 +93,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:13:28.001687Z",
-     "iopub.status.busy": "2024-03-18T21:13:28.001586Z",
-     "iopub.status.idle": "2024-03-18T21:13:28.123676Z",
-     "shell.execute_reply": "2024-03-18T21:13:28.123229Z"
+     "iopub.execute_input": "2024-03-20T18:27:14.461236Z",
+     "iopub.status.busy": "2024-03-20T18:27:14.461132Z",
+     "iopub.status.idle": "2024-03-20T18:27:14.576095Z",
+     "shell.execute_reply": "2024-03-20T18:27:14.575655Z"
     },
     "jukit_cell_id": "xdgUvt0md2"
    },
@@ -110,7 +110,7 @@
     "# Class for calculating correlations\n",
     "from CorrelateData import CorrelateData\n",
     "\n",
-    "platedf_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_5_sc_feature_selected.parquet\").resolve(strict=True)\n",
+    "platedf_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_5_bulk_camerons_method.parquet\").resolve(strict=True)\n",
     "platedf = pd.read_parquet(platedf_path)"
    ]
   },
@@ -128,10 +128,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:13:28.125759Z",
-     "iopub.status.busy": "2024-03-18T21:13:28.125618Z",
-     "iopub.status.idle": "2024-03-18T21:13:28.127887Z",
-     "shell.execute_reply": "2024-03-18T21:13:28.127557Z"
+     "iopub.execute_input": "2024-03-20T18:27:14.578115Z",
+     "iopub.status.busy": "2024-03-20T18:27:14.577902Z",
+     "iopub.status.idle": "2024-03-20T18:27:14.580229Z",
+     "shell.execute_reply": "2024-03-20T18:27:14.579894Z"
     },
     "jukit_cell_id": "z3syxsoQ8C"
    },
@@ -155,10 +155,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:13:28.129168Z",
-     "iopub.status.busy": "2024-03-18T21:13:28.129058Z",
-     "iopub.status.idle": "2024-03-18T21:13:28.150306Z",
-     "shell.execute_reply": "2024-03-18T21:13:28.149871Z"
+     "iopub.execute_input": "2024-03-20T18:27:14.581633Z",
+     "iopub.status.busy": "2024-03-20T18:27:14.581445Z",
+     "iopub.status.idle": "2024-03-20T18:27:14.602145Z",
+     "shell.execute_reply": "2024-03-20T18:27:14.601717Z"
     },
     "jukit_cell_id": "xhrzmqufGA"
    },
@@ -168,44 +168,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "jukit_cell_id": "ORLxzNz38j"
-   },
-   "source": [
-    "## Aggregate cells with cameron's method"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:13:28.152094Z",
-     "iopub.status.busy": "2024-03-18T21:13:28.151869Z",
-     "iopub.status.idle": "2024-03-18T21:13:28.410394Z",
-     "shell.execute_reply": "2024-03-18T21:13:28.409842Z"
+     "iopub.execute_input": "2024-03-20T18:27:14.603620Z",
+     "iopub.status.busy": "2024-03-20T18:27:14.603404Z",
+     "iopub.status.idle": "2024-03-20T18:27:14.615731Z",
+     "shell.execute_reply": "2024-03-20T18:27:14.615158Z"
     },
     "jukit_cell_id": "rB32cuv8gh"
    },
    "outputs": [],
    "source": [
     "meta_cols = platedf.filter(like=\"Metadata\").columns\n",
-    "feat_cols = platedf.drop(columns=meta_cols).columns\n",
-    "\n",
-    "median_cols = {col_name: \"median\" for col_name in platedf.columns if col_name not in meta_cols}\n",
-    "\n",
-    "# Set metadata columns to lambda functions set to the first row\n",
-    "meta_cols = {\n",
-    "    col_name: lambda x: x.iloc[0]\n",
-    "    for col_name in meta_cols\n",
-    "}\n",
-    "\n",
-    "# Combine the dictionaries\n",
-    "median_cols.update(meta_cols)\n",
-    "\n",
-    "# Aggregate the plate data\n",
-    "welldf = platedf.groupby(\"Metadata_Well\").agg(median_cols)"
+    "feat_cols = platedf.drop(columns=meta_cols).columns"
    ]
   },
   {
@@ -222,10 +199,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:13:28.412616Z",
-     "iopub.status.busy": "2024-03-18T21:13:28.412464Z",
-     "iopub.status.idle": "2024-03-18T21:13:28.924198Z",
-     "shell.execute_reply": "2024-03-18T21:13:28.923800Z"
+     "iopub.execute_input": "2024-03-20T18:27:14.617801Z",
+     "iopub.status.busy": "2024-03-20T18:27:14.617533Z",
+     "iopub.status.idle": "2024-03-20T18:27:15.484385Z",
+     "shell.execute_reply": "2024-03-20T18:27:15.483824Z"
     },
     "jukit_cell_id": "jkgkgRzXxY"
    },
@@ -234,13 +211,15 @@
     "cd = CorrelateData()\n",
     "correlationsdf = []\n",
     "\n",
+    "correlation_params = {\n",
+    "    \"_df\": platedf.reset_index(drop=True),\n",
+    "    \"_antehoc_group_cols\": [\"Metadata_genotype\"],\n",
+    "    \"_feat_cols\": feat_cols,\n",
+    "    \"_posthoc_group_cols\": [\"Metadata_Well\"]\n",
+    "}\n",
+    "\n",
     "# Correlates aggregated wells across genotype\n",
-    "correlationsdf.append(cd.inter_correlations(\n",
-    "    welldf.reset_index(drop=True),\n",
-    "    [\"Metadata_Well\"],\n",
-    "    feat_cols,\n",
-    "    [\"Metadata_genotype\"]\n",
-    "))"
+    "correlationsdf.append(cd.inter_correlations(**correlation_params))"
    ]
   },
   {
@@ -248,22 +227,17 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:13:28.925970Z",
-     "iopub.status.busy": "2024-03-18T21:13:28.925760Z",
-     "iopub.status.idle": "2024-03-18T21:13:29.125850Z",
-     "shell.execute_reply": "2024-03-18T21:13:29.125396Z"
+     "iopub.execute_input": "2024-03-20T18:27:15.486393Z",
+     "iopub.status.busy": "2024-03-20T18:27:15.486263Z",
+     "iopub.status.idle": "2024-03-20T18:27:15.853358Z",
+     "shell.execute_reply": "2024-03-20T18:27:15.852837Z"
     },
     "jukit_cell_id": "2W0HhVoQ8N"
    },
    "outputs": [],
    "source": [
     "# Correlates aggregated wells within genotype\n",
-    "correlationsdf.append(cd.intra_correlations(\n",
-    "    welldf.reset_index(drop=True),\n",
-    "    [\"Metadata_Well\"],\n",
-    "    feat_cols,\n",
-    "    [\"Metadata_genotype\"]\n",
-    "))"
+    "correlationsdf.append(cd.intra_correlations(**correlation_params))"
    ]
   },
   {
@@ -280,10 +254,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:13:29.127611Z",
-     "iopub.status.busy": "2024-03-18T21:13:29.127407Z",
-     "iopub.status.idle": "2024-03-18T21:13:29.132964Z",
-     "shell.execute_reply": "2024-03-18T21:13:29.132621Z"
+     "iopub.execute_input": "2024-03-20T18:27:15.855099Z",
+     "iopub.status.busy": "2024-03-20T18:27:15.854965Z",
+     "iopub.status.idle": "2024-03-20T18:27:15.866867Z",
+     "shell.execute_reply": "2024-03-20T18:27:15.866515Z"
     },
     "jukit_cell_id": "HD42qd1jUX"
    },
@@ -298,10 +272,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-18T21:13:29.134604Z",
-     "iopub.status.busy": "2024-03-18T21:13:29.134337Z",
-     "iopub.status.idle": "2024-03-18T21:13:29.140990Z",
-     "shell.execute_reply": "2024-03-18T21:13:29.140609Z"
+     "iopub.execute_input": "2024-03-20T18:27:15.868507Z",
+     "iopub.status.busy": "2024-03-20T18:27:15.868258Z",
+     "iopub.status.idle": "2024-03-20T18:27:15.875939Z",
+     "shell.execute_reply": "2024-03-20T18:27:15.875445Z"
     },
     "jukit_cell_id": "ZWUk9bCL8r"
    },
@@ -337,7 +311,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.643891</td>\n",
+       "      <td>0.243265</td>\n",
        "      <td>HET</td>\n",
        "      <td>HET</td>\n",
        "      <td>B5</td>\n",
@@ -345,7 +319,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.636822</td>\n",
+       "      <td>0.188601</td>\n",
        "      <td>HET</td>\n",
        "      <td>HET</td>\n",
        "      <td>B5</td>\n",
@@ -353,7 +327,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.456990</td>\n",
+       "      <td>0.056885</td>\n",
        "      <td>HET</td>\n",
        "      <td>HET</td>\n",
        "      <td>B5</td>\n",
@@ -361,7 +335,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.584771</td>\n",
+       "      <td>0.128558</td>\n",
        "      <td>HET</td>\n",
        "      <td>HET</td>\n",
        "      <td>B5</td>\n",
@@ -369,7 +343,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.576349</td>\n",
+       "      <td>0.255567</td>\n",
        "      <td>HET</td>\n",
        "      <td>HET</td>\n",
        "      <td>B5</td>\n",
@@ -381,11 +355,11 @@
       ],
       "text/plain": [
        "   correlation Metadata_genotype__group0 Metadata_genotype__group1  \\\n",
-       "0     0.643891                       HET                       HET   \n",
-       "1     0.636822                       HET                       HET   \n",
-       "2     0.456990                       HET                       HET   \n",
-       "3     0.584771                       HET                       HET   \n",
-       "4     0.576349                       HET                       HET   \n",
+       "0     0.243265                       HET                       HET   \n",
+       "1     0.188601                       HET                       HET   \n",
+       "2     0.056885                       HET                       HET   \n",
+       "3     0.128558                       HET                       HET   \n",
+       "4     0.255567                       HET                       HET   \n",
        "\n",
        "  Metadata_Well__group0 Metadata_Well__group1  \n",
        "0                    B5                    B5  \n",
