modified output path

--- a/2.evaluate_models/log_reg_plates_3_3p_5_cp_norm_data/plate_3_3p_5_evaluate_log_reg.ipynb
+++ b/2.evaluate_models/log_reg_plates_3_3p_5_cp_norm_data/plate_3_3p_5_evaluate_log_reg.ipynb
@@ -14,10 +14,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-24T02:29:39.202332Z",
-     "iopub.status.busy": "2024-03-24T02:29:39.202085Z",
-     "iopub.status.idle": "2024-03-24T02:29:39.589895Z",
-     "shell.execute_reply": "2024-03-24T02:29:39.589502Z"
+     "iopub.execute_input": "2024-03-24T02:35:08.704505Z",
+     "iopub.status.busy": "2024-03-24T02:35:08.704398Z",
+     "iopub.status.idle": "2024-03-24T02:35:09.088518Z",
+     "shell.execute_reply": "2024-03-24T02:35:09.088060Z"
     },
     "jukit_cell_id": "RcnXoNLyM2"
    },
@@ -45,10 +45,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-24T02:29:39.592213Z",
-     "iopub.status.busy": "2024-03-24T02:29:39.592018Z",
-     "iopub.status.idle": "2024-03-24T02:29:39.594820Z",
-     "shell.execute_reply": "2024-03-24T02:29:39.594508Z"
+     "iopub.execute_input": "2024-03-24T02:35:09.091003Z",
+     "iopub.status.busy": "2024-03-24T02:35:09.090571Z",
+     "iopub.status.idle": "2024-03-24T02:35:09.093475Z",
+     "shell.execute_reply": "2024-03-24T02:35:09.093163Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -95,10 +95,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-24T02:29:39.596481Z",
-     "iopub.status.busy": "2024-03-24T02:29:39.596154Z",
-     "iopub.status.idle": "2024-03-24T02:29:39.963721Z",
-     "shell.execute_reply": "2024-03-24T02:29:39.963227Z"
+     "iopub.execute_input": "2024-03-24T02:35:09.094983Z",
+     "iopub.status.busy": "2024-03-24T02:35:09.094761Z",
+     "iopub.status.idle": "2024-03-24T02:35:09.423632Z",
+     "shell.execute_reply": "2024-03-24T02:35:09.423152Z"
     },
     "jukit_cell_id": "zFHiLC64Ss"
    },
@@ -127,17 +127,17 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-24T02:29:39.966298Z",
-     "iopub.status.busy": "2024-03-24T02:29:39.966130Z",
-     "iopub.status.idle": "2024-03-24T02:29:39.968915Z",
-     "shell.execute_reply": "2024-03-24T02:29:39.968522Z"
+     "iopub.execute_input": "2024-03-24T02:35:09.426135Z",
+     "iopub.status.busy": "2024-03-24T02:35:09.425740Z",
+     "iopub.status.idle": "2024-03-24T02:35:09.428034Z",
+     "shell.execute_reply": "2024-03-24T02:35:09.427703Z"
     },
     "jukit_cell_id": "byqT0qeQSc"
    },
    "outputs": [],
    "source": [
-    "models_path = pathlib.Path(\"model_eval_data\")\n",
-    "models_path.mkdir(parents=True, exist_ok=True)"
+    "eval_path = pathlib.Path(\"model_eval_data\")\n",
+    "eval_path.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -145,10 +145,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-24T02:29:39.970999Z",
-     "iopub.status.busy": "2024-03-24T02:29:39.970643Z",
-     "iopub.status.idle": "2024-03-24T02:29:39.974724Z",
-     "shell.execute_reply": "2024-03-24T02:29:39.974333Z"
+     "iopub.execute_input": "2024-03-24T02:35:09.429374Z",
+     "iopub.status.busy": "2024-03-24T02:35:09.429138Z",
+     "iopub.status.idle": "2024-03-24T02:35:09.432315Z",
+     "shell.execute_reply": "2024-03-24T02:35:09.431997Z"
     },
     "jukit_cell_id": "7K1U3LMO6u"
    },
@@ -188,10 +188,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-24T02:29:39.976769Z",
-     "iopub.status.busy": "2024-03-24T02:29:39.976473Z",
-     "iopub.status.idle": "2024-03-24T02:29:39.983267Z",
-     "shell.execute_reply": "2024-03-24T02:29:39.982862Z"
+     "iopub.execute_input": "2024-03-24T02:35:09.433699Z",
+     "iopub.status.busy": "2024-03-24T02:35:09.433471Z",
+     "iopub.status.idle": "2024-03-24T02:35:09.438160Z",
+     "shell.execute_reply": "2024-03-24T02:35:09.437824Z"
     },
     "jukit_cell_id": "l12u5TJUQx"
    },
@@ -265,10 +265,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-24T02:29:39.985255Z",
-     "iopub.status.busy": "2024-03-24T02:29:39.984944Z",
-     "iopub.status.idle": "2024-03-24T02:29:48.090917Z",
-     "shell.execute_reply": "2024-03-24T02:29:48.090501Z"
+     "iopub.execute_input": "2024-03-24T02:35:09.439399Z",
+     "iopub.status.busy": "2024-03-24T02:35:09.439174Z",
+     "iopub.status.idle": "2024-03-24T02:35:17.557044Z",
+     "shell.execute_reply": "2024-03-24T02:35:17.556492Z"
     },
     "jukit_cell_id": "GGD1QwPX1B"
    },
@@ -302,17 +302,17 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-24T02:29:48.093152Z",
-     "iopub.status.busy": "2024-03-24T02:29:48.093002Z",
-     "iopub.status.idle": "2024-03-24T02:29:51.298487Z",
-     "shell.execute_reply": "2024-03-24T02:29:51.297986Z"
+     "iopub.execute_input": "2024-03-24T02:35:17.559264Z",
+     "iopub.status.busy": "2024-03-24T02:35:17.558978Z",
+     "iopub.status.idle": "2024-03-24T02:35:20.719011Z",
+     "shell.execute_reply": "2024-03-24T02:35:20.718391Z"
     },
     "jukit_cell_id": "zubg81WM3n"
    },
    "outputs": [],
    "source": [
     "for met, met_data in eval_mets.items():\n",
-    "    pd.DataFrame(eval_mets[met]).to_parquet(f\"{data_path}/plate_{met}.parquet\")"
+    "    pd.DataFrame(eval_mets[met]).to_parquet(f\"{eval_path}/plate_{met}.parquet\")"
    ]
   }
  ],
