Updated modeling from pr comments

--- a/1.train_models/classify_genotypes/classify_genotypes.ipynb
+++ b/1.train_models/classify_genotypes/classify_genotypes.ipynb
@@ -17,10 +17,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-20T23:28:08.733728Z",
-     "iopub.status.busy": "2024-05-20T23:28:08.733430Z",
-     "iopub.status.idle": "2024-05-20T23:28:09.180507Z",
-     "shell.execute_reply": "2024-05-20T23:28:09.180062Z"
+     "iopub.execute_input": "2024-05-21T18:21:02.848659Z",
+     "iopub.status.busy": "2024-05-21T18:21:02.848557Z",
+     "iopub.status.idle": "2024-05-21T18:21:03.302140Z",
+     "shell.execute_reply": "2024-05-21T18:21:03.301543Z"
     },
     "jukit_cell_id": "RcnXoNLyM2"
    },
@@ -56,10 +56,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-20T23:28:09.182705Z",
-     "iopub.status.busy": "2024-05-20T23:28:09.182490Z",
-     "iopub.status.idle": "2024-05-20T23:28:09.185467Z",
-     "shell.execute_reply": "2024-05-20T23:28:09.185189Z"
+     "iopub.execute_input": "2024-05-21T18:21:03.304538Z",
+     "iopub.status.busy": "2024-05-21T18:21:03.304307Z",
+     "iopub.status.idle": "2024-05-21T18:21:03.307498Z",
+     "shell.execute_reply": "2024-05-21T18:21:03.307115Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -106,18 +106,18 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-20T23:28:09.187547Z",
-     "iopub.status.busy": "2024-05-20T23:28:09.187279Z",
-     "iopub.status.idle": "2024-05-20T23:28:09.823728Z",
-     "shell.execute_reply": "2024-05-20T23:28:09.823367Z"
+     "iopub.execute_input": "2024-05-21T18:21:03.309272Z",
+     "iopub.status.busy": "2024-05-21T18:21:03.309019Z",
+     "iopub.status.idle": "2024-05-21T18:21:03.688616Z",
+     "shell.execute_reply": "2024-05-21T18:21:03.688268Z"
     },
     "jukit_cell_id": "xdgUvt0md2"
    },
    "outputs": [],
    "source": [
-    "plate5df_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_5_sc_normalized.parquet\").resolve(strict=True)\n",
-    "plate3df_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_3_sc_normalized.parquet\").resolve(strict=True)\n",
-    "plate3pdf_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_3_prime_sc_normalized.parquet\").resolve(strict=True)\n",
+    "plate5df_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_5_sc_feature_selected.parquet\").resolve(strict=True)\n",
+    "plate3df_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_3_sc_feature_selected.parquet\").resolve(strict=True)\n",
+    "plate3pdf_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_3_prime_sc_feature_selected.parquet\").resolve(strict=True)\n",
     "plate4df_path = pathlib.Path(root_dir / \"nf1_painting_repo/3.processing_features/data/single_cell_profiles/Plate_4_sc_feature_selected.parquet\").resolve(strict=True)\n",
     "\n",
     "plate5df = pd.read_parquet(plate5df_path)\n",
@@ -125,6 +125,7 @@
     "plate3df = pd.read_parquet(plate3df_path)\n",
     "plate3pdf = pd.read_parquet(plate3pdf_path)\n",
     "\n",
+    "# Set the seed\n",
     "rng = np.random.default_rng(0)"
    ]
   },
@@ -142,10 +143,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-20T23:28:09.825875Z",
-     "iopub.status.busy": "2024-05-20T23:28:09.825760Z",
-     "iopub.status.idle": "2024-05-20T23:28:09.827964Z",
-     "shell.execute_reply": "2024-05-20T23:28:09.827683Z"
+     "iopub.execute_input": "2024-05-21T18:21:03.690996Z",
+     "iopub.status.busy": "2024-05-21T18:21:03.690619Z",
+     "iopub.status.idle": "2024-05-21T18:21:03.692854Z",
+     "shell.execute_reply": "2024-05-21T18:21:03.692603Z"
     },
     "jukit_cell_id": "byqT0qeQSc"
    },
@@ -170,10 +171,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-20T23:28:09.829653Z",
-     "iopub.status.busy": "2024-05-20T23:28:09.829424Z",
-     "iopub.status.idle": "2024-05-20T23:28:09.833628Z",
-     "shell.execute_reply": "2024-05-20T23:28:09.833347Z"
+     "iopub.execute_input": "2024-05-21T18:21:03.694219Z",
+     "iopub.status.busy": "2024-05-21T18:21:03.693975Z",
+     "iopub.status.idle": "2024-05-21T18:21:03.698213Z",
+     "shell.execute_reply": "2024-05-21T18:21:03.697960Z"
     },
     "jukit_cell_id": "qP1KgMqkE7"
    },
@@ -183,6 +184,9 @@
     "\n",
     "def down_sample_by_genotype(_df):\n",
     "    \"\"\"\n",
+    "    Return an equal number of cells from each genotype.\n",
+    "    The number of cells in a genotype is the minimum number of cells from all genotypes.\n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    _df: Pandas Dataframe\n",
@@ -200,10 +204,12 @@
     "\n",
     "def process_plates(_df):\n",
     "    \"\"\"\n",
+    "    Drop rows with nans from the single cell data and remove HET cells.\n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    _df: Pandas Dataframe\n",
-    "        Uncleaned plate data with nans and HET cells to be removed.\n",
+    "        Uncleaned plate data with nans and HET cells to be removed. Contains the column \"Metadata_genotype\".\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -269,10 +275,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-20T23:28:09.835306Z",
-     "iopub.status.busy": "2024-05-20T23:28:09.835167Z",
-     "iopub.status.idle": "2024-05-20T23:28:09.837526Z",
-     "shell.execute_reply": "2024-05-20T23:28:09.837248Z"
+     "iopub.execute_input": "2024-05-21T18:21:03.699358Z",
+     "iopub.status.busy": "2024-05-21T18:21:03.699251Z",
+     "iopub.status.idle": "2024-05-21T18:21:03.701304Z",
+     "shell.execute_reply": "2024-05-21T18:21:03.701054Z"
     },
     "jukit_cell_id": "z9zzUXpQ67"
    },
@@ -303,10 +309,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-20T23:28:09.839031Z",
-     "iopub.status.busy": "2024-05-20T23:28:09.838919Z",
-     "iopub.status.idle": "2024-05-20T23:28:10.411042Z",
-     "shell.execute_reply": "2024-05-20T23:28:10.410474Z"
+     "iopub.execute_input": "2024-05-21T18:21:03.702389Z",
+     "iopub.status.busy": "2024-05-21T18:21:03.702283Z",
+     "iopub.status.idle": "2024-05-21T18:21:04.036787Z",
+     "shell.execute_reply": "2024-05-21T18:21:04.036371Z"
     },
     "jukit_cell_id": "qrteU1j4F9"
    },
@@ -322,16 +328,16 @@
     "rest3df, test3df = create_splits(p3_wells, plate3df)\n",
     "rest3df, test3df = down_sample_by_genotype(rest3df), down_sample_by_genotype(test3df)\n",
     "\n",
-    "plate3pdf[\"Metadata_Plate\"] = \"Plate_3p\"\n",
     "plate3pdf = process_plates(plate3pdf)\n",
     "p3p_wells = [\"F11\", \"G11\", \"C3\", \"F3\"]\n",
     "rest3pdf, test3pdf = create_splits(p3p_wells, plate3pdf)\n",
     "rest3pdf, test3pdf = down_sample_by_genotype(rest3pdf), down_sample_by_genotype(test3pdf)\n",
     "\n",
+    "# Removed siRNA-treated cells to retain only Null and WT cells\n",
     "plate4df[\"Metadata_siRNA\"].fillna(\"No Construct\", inplace=True)\n",
     "plate4df.dropna(inplace=True)\n",
     "plate4df = plate4df.loc[plate4df[\"Metadata_siRNA\"] == \"No Construct\"]\n",
-    "plate4df[\"Metadata_Plate\"] = \"Plate_4\"\n",
+    "\n",
     "plate4df = process_plates(plate4df)\n",
     "p4_wells = [\"D5\", \"C11\"]\n",
     "rest4df, test4df = create_splits(p4_wells, plate4df)\n",
@@ -344,7 +350,7 @@
     "jukit_cell_id": "pnZI3c8SRh"
    },
    "source": [
-    "## Harmonize data across plates to each data split"
+    "## Combine plate columns across each data split"
    ]
   },
   {
@@ -352,10 +358,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-20T23:28:10.413446Z",
-     "iopub.status.busy": "2024-05-20T23:28:10.413296Z",
-     "iopub.status.idle": "2024-05-20T23:28:10.681909Z",
-     "shell.execute_reply": "2024-05-20T23:28:10.680808Z"
+     "iopub.execute_input": "2024-05-21T18:21:04.039138Z",
+     "iopub.status.busy": "2024-05-21T18:21:04.038990Z",
+     "iopub.status.idle": "2024-05-21T18:21:04.221845Z",
+     "shell.execute_reply": "2024-05-21T18:21:04.221424Z"
     },
     "jukit_cell_id": "JPOu8mYg6w"
    },
@@ -383,10 +389,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-20T23:28:10.683964Z",
-     "iopub.status.busy": "2024-05-20T23:28:10.683846Z",
-     "iopub.status.idle": "2024-05-20T23:28:10.688485Z",
-     "shell.execute_reply": "2024-05-20T23:28:10.688109Z"
+     "iopub.execute_input": "2024-05-21T18:21:04.224115Z",
+     "iopub.status.busy": "2024-05-21T18:21:04.223968Z",
+     "iopub.status.idle": "2024-05-21T18:21:04.227948Z",
+     "shell.execute_reply": "2024-05-21T18:21:04.227664Z"
     },
     "jukit_cell_id": "NTCaf4xXY1"
    },
@@ -401,10 +407,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-20T23:28:10.690067Z",
-     "iopub.status.busy": "2024-05-20T23:28:10.689875Z",
-     "iopub.status.idle": "2024-05-20T23:28:10.716055Z",
-     "shell.execute_reply": "2024-05-20T23:28:10.715579Z"
+     "iopub.execute_input": "2024-05-21T18:21:04.229639Z",
+     "iopub.status.busy": "2024-05-21T18:21:04.229535Z",
+     "iopub.status.idle": "2024-05-21T18:21:04.251304Z",
+     "shell.execute_reply": "2024-05-21T18:21:04.250939Z"
     },
     "jukit_cell_id": "m7apYZPkME"
    },
@@ -445,10 +451,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-20T23:28:10.717901Z",
-     "iopub.status.busy": "2024-05-20T23:28:10.717787Z",
-     "iopub.status.idle": "2024-05-20T23:28:10.720942Z",
-     "shell.execute_reply": "2024-05-20T23:28:10.720573Z"
+     "iopub.execute_input": "2024-05-21T18:21:04.253436Z",
+     "iopub.status.busy": "2024-05-21T18:21:04.253087Z",
+     "iopub.status.idle": "2024-05-21T18:21:04.256215Z",
+     "shell.execute_reply": "2024-05-21T18:21:04.255955Z"
     },
     "jukit_cell_id": "sZFW0vn0zv"
    },
@@ -500,10 +506,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-20T23:28:10.722541Z",
-     "iopub.status.busy": "2024-05-20T23:28:10.722348Z",
-     "iopub.status.idle": "2024-05-21T06:38:55.487258Z",
-     "shell.execute_reply": "2024-05-21T06:38:55.486768Z"
+     "iopub.execute_input": "2024-05-21T18:21:04.257880Z",
+     "iopub.status.busy": "2024-05-21T18:21:04.257775Z",
+     "iopub.status.idle": "2024-05-22T00:42:42.695942Z",
+     "shell.execute_reply": "2024-05-22T00:42:42.695491Z"
     },
     "jukit_cell_id": "rHYvmbnZNf"
    },
@@ -512,7 +518,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best average validation accuracy = 0.9295577303989904\n"
+      "Best average validation accuracy = 0.9040083496041922\n"
      ]
     }
    ],
@@ -580,10 +586,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-21T06:38:55.523824Z",
-     "iopub.status.busy": "2024-05-21T06:38:55.523632Z",
-     "iopub.status.idle": "2024-05-21T06:39:04.547444Z",
-     "shell.execute_reply": "2024-05-21T06:39:04.546991Z"
+     "iopub.execute_input": "2024-05-22T00:42:42.723227Z",
+     "iopub.status.busy": "2024-05-22T00:42:42.723042Z",
+     "iopub.status.idle": "2024-05-22T00:42:50.302142Z",
+     "shell.execute_reply": "2024-05-22T00:42:50.301365Z"
     },
     "jukit_cell_id": "FNeiZcYJzz"
    },
@@ -995,12 +1001,12 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(C=153.1231548584692, max_iter=3000, n_jobs=-1,\n",
-       "                   random_state=0)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(C=153.1231548584692, max_iter=3000, n_jobs=-1,\n",
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(C=100.75954293416305, max_iter=3000, n_jobs=-1,\n",
+       "                   random_state=0)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(C=100.75954293416305, max_iter=3000, n_jobs=-1,\n",
        "                   random_state=0)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "LogisticRegression(C=153.1231548584692, max_iter=3000, n_jobs=-1,\n",
+       "LogisticRegression(C=100.75954293416305, max_iter=3000, n_jobs=-1,\n",
        "                   random_state=0)"
       ]
      },
@@ -1037,10 +1043,10 @@
    "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-21T06:39:04.550007Z",
-     "iopub.status.busy": "2024-05-21T06:39:04.549684Z",
-     "iopub.status.idle": "2024-05-21T06:39:17.105249Z",
-     "shell.execute_reply": "2024-05-21T06:39:17.104817Z"
+     "iopub.execute_input": "2024-05-22T00:42:50.305016Z",
+     "iopub.status.busy": "2024-05-22T00:42:50.304779Z",
+     "iopub.status.idle": "2024-05-22T00:43:02.818586Z",
+     "shell.execute_reply": "2024-05-22T00:43:02.818167Z"
     },
     "jukit_cell_id": "Hwc1Sal9AZ"
    },
@@ -1076,10 +1082,10 @@
    "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-21T06:39:17.108101Z",
-     "iopub.status.busy": "2024-05-21T06:39:17.107669Z",
-     "iopub.status.idle": "2024-05-21T06:39:17.297285Z",
-     "shell.execute_reply": "2024-05-21T06:39:17.296849Z"
+     "iopub.execute_input": "2024-05-22T00:43:02.820572Z",
+     "iopub.status.busy": "2024-05-22T00:43:02.820422Z",
+     "iopub.status.idle": "2024-05-22T00:43:02.969411Z",
+     "shell.execute_reply": "2024-05-22T00:43:02.968984Z"
     },
     "jukit_cell_id": "4uw0FlkRQV"
    },
@@ -1097,10 +1103,10 @@
    "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-21T06:39:17.299742Z",
-     "iopub.status.busy": "2024-05-21T06:39:17.299591Z",
-     "iopub.status.idle": "2024-05-21T06:39:50.115727Z",
-     "shell.execute_reply": "2024-05-21T06:39:50.115254Z"
+     "iopub.execute_input": "2024-05-22T00:43:02.971899Z",
+     "iopub.status.busy": "2024-05-22T00:43:02.971744Z",
+     "iopub.status.idle": "2024-05-22T00:43:36.758999Z",
+     "shell.execute_reply": "2024-05-22T00:43:36.758554Z"
     },
     "jukit_cell_id": "ONBKrPrWx0"
    },
